--- a/7SegmentDisplay/index.html
+++ b/7SegmentDisplay/index.html
@@ -10,6 +10,6 @@
   <body>
     <main>
     </main>
-    <script src="https://firebasestorage.googleapis.com/v0/b/test-3ae2e.appspot.com/o/sketch.js?alt=media&token=6c606e2f-2a5d-42dd-bc86-6d43762e34b1"></script>
+    <script src="7SegmentDisplay/sketch.js"></script>
   </body>
 </html>
