--- a/7SegmentDisplay/index.html
+++ b/7SegmentDisplay/index.html
@@ -3,7 +3,7 @@
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://firebasestorage.googleapis.com/v0/b/test-3ae2e.appspot.com/o/style.css?alt=media&token=77e69b4e-3bd8-4638-8197-7d33038047da">
+    <link rel="stylesheet" type="text/css" href="7SegmentDisplay/style.css">
     <meta charset="utf-8" />
 
   </head>
